tests/e2e/semantics/obj_index_float.error
Error: syntax error in story at line 2, column 8

2|    b = a[1.5]
             ^

E0041: `.` is not allowed here
